Complete thought CRUD.

--- a/src/modules/admin/content/a-news/a-thoughts/a-thoughts.component.html
+++ b/src/modules/admin/content/a-news/a-thoughts/a-thoughts.component.html
@@ -1,135 +1,137 @@
 <!-- Modals -->
 
 <ng-template #deleteThoughtModal let-modal>
-    <div class="modal-body">
-      <div class="container">
-        <div class="row">
-          <div class="col text-center">
-            <p>Na pewno usunąć tę myśl?"?</p>
-            <p>
-              Tej operacji <strong class="text-danger"> nie da się cofnąć!</strong>
-            </p>
-          </div>
+  <div class="modal-body">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">
+          <p>Na pewno usunąć tę myśl?"?</p>
+          <p>
+            Tej operacji <strong class="text-danger"> nie da się cofnąć!</strong>
+          </p>
         </div>
       </div>
     </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" (click)="modal.close()">Anuluj</button>
-      <button type="button" class="btn btn-danger" (click)="onDeleteThought(); modal.close()">Usuń</button>
-    </div>
-  </ng-template>
-  
-  <!-- Code -->
-  
-  <div class="mt-3">
-    <nb-card>
-      <nb-card-header>
-        Dodaj nową myśl:
-      </nb-card-header>
-      <nb-card-body>
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <form [formGroup]="createThoughtForm" class="mx-auto d-block">
-                <div class="row">
-                  <div class="col-12 col-sm-6">
-                    <p>Opis:</p>
-                    <textarea type="text" formControlName="description" placeholder="(od 3 do 200 znaków)" class="form-control" rows="5"></textarea>
-                    <br>
-                  </div>
-                  <div class="col-12 col-sm-6">
-                    <p>Akceptacja:</p>
-                    <select class="form-control" formControlName="accepted">
-                      <option>Oczekuje</option>
-                      <option>Przyjęto</option>
-                    </select>
-                    <br>
-                    <p>Plik:</p>
-                    <input type="file" formControlName="image" class="form-control-file" (change)="onSelectThoughtFile($event)"
-                      accept="image/jpeg" [ngStyle]="{'height': '38px'}">
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-          <div class="col-12">
-            <div class="text-center">
-              <img [src]="previewCreateThoughtUrl" class="my-2 my-sm-3 prev">
-            </div>
-            <div class="col-12">
-              <button type="submit" class="btn btn-success mt-2 mt-sm-3 pull-right" (click)="onThoughtCreateSubmit()"
-                [disabled]="createThoughtForm.invalid || createThoughtForm.pristine">
-                Dodaj nową myśl
-              </button>
-            </div>
-          </div>
-        </div>
-      </nb-card-body>
-    </nb-card>
-  
-    <nb-card>
-      <nb-card-header>
-        Myśli w bazie danych:
-      </nb-card-header>
-      <nb-card-body>
-        <ng2-smart-table [settings]="settings" [source]="source" (edit)="onEditThought($event)" (delete)="onDeleteThoughtModal($event)"></ng2-smart-table>
-      </nb-card-body>
-    </nb-card>
-  
-    <nb-card *ngIf="showThoughtDetails">
-      <nb-card-header>
-        Szczegóły myśli:
-      </nb-card-header>
-      <nb-card-body>
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <form [formGroup]="editThoughtForm" class="mx-auto d-block">
-                <div class="row">
-                  <div class="col-12 col-sm-6">
-                    <p>Opis:</p>
-                    <input type="text" formControlName="description" placeholder="(od 3 do 200 znaków)" class="form-control">
-                    <br>
-                    <p>Data wydarzenia:</p>
-                    <input type="date" formControlName="happensAt" class="form-control" value="{{selectedThought.happensAt | date : 'yyyy-MM-dd'}}">
-                    <br>
-                  </div>
-                  <div class="col-12 col-sm-6">
-                    <p>Akceptacja:</p>
-                    <select class="form-control" formControlName="accepted">
-                      <option>Oczekuje</option>
-                      <option>Przyjęto</option>
-                    </select>
-                    <br>
-                    <p>Zmień obraz:</p>
-                    <input type="file" formControlName="image" class="form-control-file" (change)="onSelectEditThoughtFile($event)"
-                      accept="image/jpeg">
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-          <div class="col-12">
-            <div class="text-center">
-              <img [src]="previewEditThoughtUrl" class="my-2 my-sm-3 prev">
-            </div>
-            <button type="button" class="btn btn-success mx-2 pull-right" (click)="closeThoughtDetails(); onThoughtEditSubmit()"
-              [disabled]="editThoughtForm.invalid || editThoughtForm.pristine">Aktualizuj</button>
-            <div class="col-12">
-              <button type="button" class="btn btn-secondary mx-2 pull-right" (click)="closeThoughtDetails()">Anuluj</button>
-            </div>
-          </div>
-        </div>
-      </nb-card-body>
-    </nb-card>
-  
-    <nb-card>
-      <nb-card-header>
-        Myśli na stronie:
-      </nb-card-header>
-      <nb-card-body>
-        <app-shared-news-thoughts></app-shared-news-thoughts>
-      </nb-card-body>
-    </nb-card>
-  
   </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="modal.close()">Anuluj</button>
+    <button type="button" class="btn btn-danger" (click)="onDeleteThought(); modal.close()">Usuń</button>
+  </div>
+</ng-template>
+
+<!-- Code -->
+
+<div class="mt-3">
+  <nb-card>
+    <nb-card-header>
+      Dodaj nową myśl:
+    </nb-card-header>
+    <nb-card-body>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <form [formGroup]="createThoughtForm" class="mx-auto d-block">
+              <div class="row">
+                <div class="col-12 col-sm-6">
+                  <p>Cytat:</p>
+                  <input type="text" formControlName="quote" placeholder="(od 3 do 200 znaków)" class="form-control">
+                  <br>
+                  <p>Autor:</p>
+                  <input type="text" formControlName="author" placeholder="(opcjonalne)" class="form-control">
+                </div>
+                <div class="col-12 col-sm-6">
+                  <p>Akceptacja:</p>
+                  <select class="form-control" formControlName="accepted">
+                    <option>Oczekuje</option>
+                    <option>Przyjęto</option>
+                  </select>
+                  <br>
+                  <p>Plik:</p>
+                  <input type="file" formControlName="image" class="form-control-file" (change)="onSelectThoughtFile($event)"
+                    accept="image/jpeg" [ngStyle]="{'height': '38px'}">
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="text-center">
+            <img [src]="previewCreateThoughtUrl" class="my-2 my-sm-3 prev">
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-success mt-2 mt-sm-3 pull-right" (click)="onThoughtCreateSubmit()"
+              [disabled]="createThoughtForm.invalid || createThoughtForm.pristine">
+              Dodaj nową myśl
+            </button>
+          </div>
+        </div>
+      </div>
+    </nb-card-body>
+  </nb-card>
+
+  <nb-card>
+    <nb-card-header>
+      Myśli w bazie danych:
+    </nb-card-header>
+    <nb-card-body>
+      <ng2-smart-table [settings]="settings" [source]="source" (edit)="onEditThought($event)" (delete)="onDeleteThoughtModal($event)"></ng2-smart-table>
+    </nb-card-body>
+  </nb-card>
+
+  <nb-card *ngIf="showThoughtDetails">
+    <nb-card-header>
+      Szczegóły myśli:
+    </nb-card-header>
+    <nb-card-body>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <form [formGroup]="editThoughtForm" class="mx-auto d-block">
+              <div class="row">
+                <div class="col-12 col-sm-6">
+                  <p>Cytat:</p>
+                  <input type="text" formControlName="quote" placeholder="(od 3 do 200 znaków)" class="form-control">
+                  <br>
+                  <p>Autor:</p>
+                  <input type="text" formControlName="author" placeholder="(opcjonalne)" class="form-control">
+                  <br>
+                </div>
+                <div class="col-12 col-sm-6">
+                  <p>Akceptacja:</p>
+                  <select class="form-control" formControlName="accepted">
+                    <option>Oczekuje</option>
+                    <option>Przyjęto</option>
+                  </select>
+                  <br>
+                  <p>Zmień obraz:</p>
+                  <input type="file" formControlName="image" class="form-control-file" (change)="onSelectEditThoughtFile($event)"
+                    accept="image/jpeg">
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="text-center">
+            <img [src]="previewEditThoughtUrl" class="my-2 my-sm-3 prev">
+          </div>
+          <button type="button" class="btn btn-success mx-2 pull-right" (click)="closeThoughtDetails(); onThoughtEditSubmit()"
+            [disabled]="editThoughtForm.invalid || editThoughtForm.pristine">Aktualizuj</button>
+          <div class="col-12">
+            <button type="button" class="btn btn-secondary mx-2 pull-right" (click)="closeThoughtDetails()">Anuluj</button>
+          </div>
+        </div>
+      </div>
+    </nb-card-body>
+  </nb-card>
+
+  <nb-card>
+    <nb-card-header>
+      Myśli na stronie:
+    </nb-card-header>
+    <nb-card-body>
+      <app-shared-news-thoughts></app-shared-news-thoughts>
+    </nb-card-body>
+  </nb-card>
+
+</div>
