A little bit retarded posters & thoughts forced reload mechanism. But it works.

--- a/src/modules/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/modules/admin/content/a-news/a-posters/a-posters.component.html
@@ -126,7 +126,7 @@
     </nb-card-body>
   </nb-card>
 
-  <nb-card>
+  <nb-card *ngIf="showPostersOnSite">
     <nb-card-header>
       Plakaty na stronie:
     </nb-card-header>
