--- a/src/modules/admin/content/a-news/a-thoughts/a-thoughts.component.html
+++ b/src/modules/admin/content/a-news/a-thoughts/a-thoughts.component.html
@@ -125,7 +125,7 @@
     </nb-card-body>
   </nb-card>
 
-  <nb-card>
+  <nb-card *ngIf="showThoughtsOnSite">
     <nb-card-header>
       Myśli na stronie:
     </nb-card-header>
