Thought font basics.

--- a/src/modules/admin/content/a-news/a-thoughts/a-thoughts.component.html
+++ b/src/modules/admin/content/a-news/a-thoughts/a-thoughts.component.html
@@ -34,10 +34,10 @@
               <div class="row">
                 <div class="col-12 col-sm-6">
                   <p>Cytat:</p>
-                  <input type="text" formControlName="quote" placeholder="(od 3 do 200 znaków)" class="form-control">
+                  <input type="text" formControlName="quote" placeholder="(od 3 do 150 znaków)" class="form-control">
                   <br>
                   <p>Autor:</p>
-                  <input type="text" formControlName="author" placeholder="(opcjonalne)" class="form-control">
+                  <input type="text" formControlName="author" placeholder="(opcjonalne, od 3 do 50 znaków)" class="form-control">
                 </div>
                 <div class="col-12 col-sm-6">
                   <p>Akceptacja:</p>
@@ -90,10 +90,10 @@
               <div class="row">
                 <div class="col-12 col-sm-6">
                   <p>Cytat:</p>
-                  <input type="text" formControlName="quote" placeholder="(od 3 do 200 znaków)" class="form-control">
+                  <input type="text" formControlName="quote" placeholder="(od 3 do 150 znaków)" class="form-control">
                   <br>
                   <p>Autor:</p>
-                  <input type="text" formControlName="author" placeholder="(opcjonalne)" class="form-control">
+                  <input type="text" formControlName="author" placeholder="(opcjonalne, od 3 do 50 znaków)" class="form-control">
                   <br>
                 </div>
                 <div class="col-12 col-sm-6">
