No posters in database. Moved to events.

--- a/src/modules/admin/content/a-news/a-news.component.html
+++ b/src/modules/admin/content/a-news/a-news.component.html
@@ -12,6 +12,8 @@
     </div>
   </nb-tab>
   <nb-tab tabTitle="Plakaty">
-    <app-a-posters></app-a-posters>
+    <p>
+      Tu będzie lista plakatów
+    </p>
   </nb-tab>
 </nb-tabset>
