--- a/src/modules/shared/news/shared-news-posters/shared-news-posters.component.html
+++ b/src/modules/shared/news/shared-news-posters/shared-news-posters.component.html
@@ -2,17 +2,17 @@
   <div class="row">
     <div class="col-sm-4 mt-sm-2 mt-md-3 mt-lg-5 poster-left">
       <div class="card">
-        <img class="card-img-top" src="{{rootUrl}}{{posters[0].posterPhotoUrl}}">
+        <img class="card-img-top" src="{{rootUrl}}{{events[0].posterPhotoUrl}}">
       </div>
     </div>
     <div class="col-sm-4 mt-sm-2 mt-md-3 mt-lg-5 poster-center">
       <div class="card">
-        <img class="card-img-top" src="{{rootUrl}}{{posters[1].posterPhotoUrl}}">
+        <img class="card-img-top" src="{{rootUrl}}{{events[1].posterPhotoUrl}}">
       </div>
     </div>
     <div class="col-sm-4 mt-sm-2 mt-md-3 mt-lg-5 poster-right">
       <div class="card">
-        <img class="card-img-top" src="{{rootUrl}}{{posters[2].posterPhotoUrl}}">
+        <img class="card-img-top" src="{{rootUrl}}{{events[2].posterPhotoUrl}}">
       </div>
     </div>
   </div>
