--- a/src/modules/app/news/news.component.html
+++ b/src/modules/app/news/news.component.html
@@ -1,2 +1,4 @@
-<app-shared-news-thoughts></app-shared-news-thoughts>
+<div class="container mt-sm-3 mt-md-5 px-0">
+    <app-shared-news-thoughts></app-shared-news-thoughts>
+</div>
 <app-shared-news-posters></app-shared-news-posters>
