--- a/src/modules/admin/content/a-events/a-events.component.html
+++ b/src/modules/admin/content/a-events/a-events.component.html
@@ -1,3 +1,142 @@
-<p>
-  a-events works!
-</p>
+<!-- Modals -->
+
+<ng-template #deleteEventModal let-modal>
+  <div class="modal-body">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">
+          <p>Na pewno usunąć to wydarzenie?</p>
+          <p>
+            Tej operacji <strong class="text-danger">nie da się cofnąć!</strong>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="modal.close()">Anuluj</button>
+    <button type="button" class="btn btn-danger" (click)="onDeleteEvent(); modal.close()">Usuń</button>
+  </div>
+</ng-template>
+
+<!-- Code -->
+
+<nb-tabset>
+  <nb-tab tabTitle="Dodaj">
+    <div class="mt-3">
+      <div class="mt-3">
+        <nb-card>
+          <nb-card-header>
+            Dodaj nowe wydarzenie:
+          </nb-card-header>
+          <nb-card-body>
+            <div class="container">
+              <div class="row">
+                <div class="col">
+                  <form [formGroup]="createEventForm" class="mx-auto d-block">
+                    <div class="row">
+                      <div class="col-12 col-sm-6">
+                        <p>Nazwa:</p>
+                        <input type="text" formControlName="eventName" placeholder="(od 3 do 150 znaków)" class="form-control">
+                        <br>
+                        <p>Data:</p>
+                        <input type="date" formControlName="happensAt" class="form-control">
+                        <br>
+                        <p>Link do zapisów:</p>
+                        <input type="text" formControlName="signUpLink" class="form-control" placeholder="(opcjonalne - URL)">
+                      </div>
+                      <div class="col-12 col-sm-6">
+                        <p>Akceptacja:</p>
+                        <select class="form-control" formControlName="accepted">
+                          <option>Oczekuje</option>
+                          <option>Przyjęto</option>
+                        </select>
+                        <br>
+                        <p>Plik:</p>
+                        <input type="file" formControlName="image" class="form-control-file" (change)="onSelectEventFile($event)"
+                          accept="image/jpeg" [ngStyle]="{'height': '38px'}">
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="text-center">
+                  <img [src]="previewCreateEventUrl" class="my-2 my-sm-3 img-fluid">
+                </div>
+                <div class="col-12">
+                  <button type="submit" class="btn btn-success mt-2 mt-sm-3 pull-right" (click)="onEventCreateSubmit()"
+                    [disabled]="createEventForm.invalid || createEventForm.pristine">
+                    Dodaj nowe wydarzenie
+                  </button>
+                </div>
+              </div>
+            </div>
+          </nb-card-body>
+        </nb-card>
+      </div>
+    </div>
+  </nb-tab>
+
+  <nb-tab tabTitle="Baza danych">
+    <div class="mt-3">
+      <nb-card>
+        <nb-card-header>
+          Wydarzenia w bazie danych:
+        </nb-card-header>
+        <nb-card-body>
+          <ng2-smart-table [settings]="settings" [source]="source" (edit)="onEditEvent($event)" (delete)="onDeleteEventModal($event)"></ng2-smart-table>
+        </nb-card-body>
+      </nb-card>
+
+      <nb-card *ngIf="showEventDetails">
+        <nb-card-header>
+          Szczegóły wydarzenia:
+        </nb-card-header>
+        <nb-card-body>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <form [formGroup]="editEventForm" class="mx-auto d-block">
+                  <div class="row">
+                    <div class="col-12 col-sm-6">
+                      <p>Nazwa:</p>
+                        <input type="text" formControlName="eventName" placeholder="(od 3 do 150 znaków)" class="form-control">
+                        <br>
+                        <p>Data:</p>
+                        <input type="date" formControlName="happensAt" class="form-control" value="{{selectedEvent.happensAt | date : 'yyyy-MM-dd'}}">
+                        <br>
+                        <p>Link do zapisów:</p>
+                        <input type="text" formControlName="signUpLink" class="form-control" placeholder="(wymagane - URL)">
+                    </div>
+                    <div class="col-12 col-sm-6">
+                      <p>Akceptacja:</p>
+                      <select class="form-control" formControlName="accepted">
+                        <option>Oczekuje</option>
+                        <option>Przyjęto</option>
+                      </select>
+                      <br>
+                      <p>Zmień obraz:</p>
+                      <input type="file" formControlName="image" class="form-control-file" (change)="onSelectEditEventFile($event)"
+                        accept="image/jpeg" [ngStyle]="{'height': '38px'}">
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="text-center">
+                <img [src]="previewEditEventUrl" class="my-2 my-sm-3 img-fluid">
+              </div>
+              <button type="button" class="btn btn-success mx-2 pull-right" (click)="closeEventDetails(); onEventEditSubmit()"
+                [disabled]="editEventForm.invalid || editEventForm.pristine">Aktualizuj</button>
+              <div class="col-12">
+                <button type="button" class="btn btn-secondary mx-2 pull-right" (click)="closeEventDetails()">Anuluj</button>
+              </div>
+            </div>
+          </div>
+        </nb-card-body>
+      </nb-card>
+    </div>
+  </nb-tab>
+</nb-tabset>
