--- a/src/modules/shared/news/shared-news-posters/shared-news-posters.component.html
+++ b/src/modules/shared/news/shared-news-posters/shared-news-posters.component.html
@@ -2,10 +2,17 @@
   <div class="row">
     <div class="col-md-4 mt-2 mt-md-3 mt-lg-5 d-flex" *ngFor="let event of events">
       <div class="card">
-        <img class="card-img-top" src="{{rootUrl}}{{events[0].posterPhotoUrl}}">
-        <a target="_blank" rel="noopener noreferrer" href="{{events[0].signUpLink}}" class="btn btn-primary my-2 my-md-3 w-100">
-          zapisz się!
-        </a>
+        <img class="card-img-top" src="{{rootUrl}}{{event.posterPhotoUrl}}">
+        <div class="card-body">
+          <h5 class="card-title">{{event.eventName}}</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the bulk of the card's
+            content.
+          </p>
+          <a target="_blank" rel="noopener noreferrer" href="{{event.signUpLink}}" class="btn btn-primary mt-2 mt-md-3 w-100">
+            zapisz się!
+          </a>
+        </div>
       </div>
     </div>
   </div>
