Slight page color change.

--- a/src/modules/shared/news/shared-news-posters/shared-news-posters.component.html
+++ b/src/modules/shared/news/shared-news-posters/shared-news-posters.component.html
@@ -9,9 +9,11 @@
             Some quick example text to build on the card title and make up the bulk of the card's
             content.
           </p>
-          <a target="_blank" rel="noopener noreferrer" href="{{event.signUpLink}}" class="btn btn-primary mt-2 mt-md-3 w-100">
-            zapisz się!
-          </a>
+          <div>
+            <a target="_blank" rel="noopener noreferrer" href="{{event.signUpLink}}" class="btn btn-primary mt-2 mt-md-3 w-100">
+              zapisz się!
+            </a>
+          </div>
         </div>
       </div>
     </div>
