--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,9 +3,13 @@
 @import url('https://fonts.googleapis.com/css?family=Charmonman:400,700&subset=latin-ext');
 
 // Font awesome
-@import "../node_modules/font-awesome/css/font-awesome.min.css";
+@import '../node_modules/font-awesome/css/font-awesome.min.css';
 
 // Global
 .container {
-    max-width: 1200px;
+  max-width: 1200px;
+}
+
+body {
+  background-color: #e6e9ef;
 }
