--- a/src/modules/shared/news/shared-news-posters/shared-news-posters.component.scss
+++ b/src/modules/shared/news/shared-news-posters/shared-news-posters.component.scss
@@ -4,4 +4,12 @@
     border: 1px solid grey;
     border-radius: .25rem;
   }
+  .card-body {
+    h5 {
+      color: black;
+    }
+    p {
+      color: black;
+    }
+  }
 }
