Create description with new lines.

--- a/src/modules/shared/news/shared-news-posters/shared-news-posters.component.html
+++ b/src/modules/shared/news/shared-news-posters/shared-news-posters.component.html
@@ -6,8 +6,7 @@
         <div class="card-body">
           <h5 class="card-title">{{event.eventName}}</h5>
           <p class="card-text">
-            Some quick example text to build on the card title and make up the bulk of the card's
-            content.
+              {{event.description}}
           </p>
           <div>
             <a target="_blank" rel="noopener noreferrer" href="{{event.signUpLink}}" class="btn btn-primary mt-2 mt-md-3 w-100">
