--- a/src/modules/admin/content/a-events/a-events.component.html
+++ b/src/modules/admin/content/a-events/a-events.component.html
@@ -44,8 +44,7 @@
                         <br>
                         <p>Link do zapisów:</p>
                         <input type="text" formControlName="signUpLink" class="form-control" placeholder="(opcjonalne - URL)">
-                      </div>
-                      <div class="col-12 col-sm-6">
+                        <br>
                         <p>Akceptacja:</p>
                         <select class="form-control" formControlName="accepted">
                           <option>Oczekuje</option>
@@ -55,6 +54,11 @@
                         <p>Plik:</p>
                         <input type="file" formControlName="image" class="form-control-file" (change)="onSelectEventFile($event)"
                           accept="image/jpeg" [ngStyle]="{'height': '38px'}">
+                      </div>
+                      <div class="col-12 col-sm-6">
+                        <p>Krótki opis:</p>
+                        <textarea formControlName="description" class="form-control" placeholder="(wymagane - od 3 do 600 znaków)" rows="5" [ngStyle]="{'height': '320px'}"></textarea>
+                        <br>
                       </div>
                     </div>
                   </form>
