--- a/src/modules/shared/news/shared-news-posters/shared-news-posters.component.html
+++ b/src/modules/shared/news/shared-news-posters/shared-news-posters.component.html
@@ -1,15 +1,15 @@
 <div class="container px-0">
   <div class="row">
     <div class="col-md-4 mt-2 mt-md-3 mt-lg-5 d-flex" *ngFor="let event of events">
-      <div class="card">
+      <div class="card d-flex">
         <img class="card-img-top" src="{{rootUrl}}{{event.posterPhotoUrl}}">
-        <div class="card-body">
+        <div class="card-body d-flex align-items-start flex-column">
           <h5 class="card-title">{{event.eventName}}</h5>
-          <p class="card-text">
-              {{event.description}}
+          <p class="card-text mt-2">
+            {{event.description}}
           </p>
-          <div>
-            <a target="_blank" rel="noopener noreferrer" href="{{event.signUpLink}}" class="btn btn-primary mt-2 mt-md-3 w-100">
+          <div class="mt-auto align-self-end w-100">
+            <a target="_blank" rel="noopener noreferrer" href="{{event.signUpLink}}" class="btn btn-primary  w-100">
               zapisz się!
             </a>
           </div>
