Basic footer and video examle in 'about'.

--- a/src/modules/app/about/about.component.html
+++ b/src/modules/app/about/about.component.html
@@ -1,3 +1,3 @@
-<p>
-  about works!
-</p>
+<div class="mt-sm-2 mt-md-3 mt-lg-5 d-flex justify-content-center">
+    <iframe width="900" height="600" src="https://www.youtube.com/embed/vTIIMJ9tUc8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
