--- a/src/modules/app/navbar/navbar.component.scss
+++ b/src/modules/app/navbar/navbar.component.scss
@@ -8,6 +8,7 @@
   .nav-link:hover,
   .dropdown-item:hover {
     color: #00a9ff;
+    cursor: pointer;
   }
   box-shadow: 0 2px 5px lightgrey;
   .navbar-toggler {
